@@ -1,3 +1,9 @@
+2011-05-28  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/gtk/widgets/file.jl: ported 'file widget to
+	gtk-file-chooser-button
+
+	* lisp/sawfish/gtk/widgets/image.jl: improved 'image widget
+
 2011-05-25  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/gtk/widgets/image.jl: added image-widget for
 	sawfish-config (contains preview and selector), original widget by
